--- a/cities.html
+++ b/cities.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <title>Lab 5</title>
-  <h1>Visit cities with Akhil</h1>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -12,8 +11,49 @@
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+      
+         .th {
+          background-color:white;
+          color: white;
+      }
+
+      .table tbody tr:hover {
+          background-color:white;
+      }
+  </style>
 </head>
 <body>
+  <h1>Visit cities with Akhil</h1>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+
+    <a class="navbar-brand" href="#">Different cities</a>
+  
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarNav">
+  
+        <ul class="navbar-nav mr-auto">
+  
+            <li class="nav-item">
+                <a class="nav-link active" href="basic.html" target="_blank">Basic</a>
+            </li>
+  
+            <li class="nav-item">
+                <a class="nav-link" href="advanced.html" target="_blank">Advanced</a>
+            </li>
+  
+        </ul>
+  
+    </div>
+  </nav>
     <div class="container">
         <div class="row">
             <div class="col-sm-2">D</div>
@@ -34,5 +74,129 @@
     </div>
     <br> <p>The cities line will broken as we have given the command col-md and size is larger when sing this command so
         the line is getting broken</p>
+        <div class="container">
+          <h4>Responsive</h4>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="Cities\Athens.jpg" alt="Athens" width="400" height="300" class="responsive-image">
+            </div>
+            <div class="col-md-4">
+              <img src="Cities\Perth.jpg" alt="Perth" width="400" height="300" class="responsive-image">
+            </div>
+            <div class="col-md-4">
+              <img src="Cities\Dallas.jpg" alt="Dallas" width="400" height="300" class="responsive-image">
+            </div>
+          </div>
+        </div>
+        <br>
+      <div class="container">
+          <h4>img-thumbnail</h4>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="Cities\Athens.jpg"
+                    alt="Athens" width="400" height="300" class="img-thumbnail" >
+            </div>
+            <div class="col-md-4">
+                <img src="Cities\Perth.jpg" alt="Perth" width="400" height="300" class="img-thumbnail">
+            </div>
+            <div class="col-md-4">
+                <img src="cities/Dallas.jpg" alt="Dallas" width="400" height="300"class="img-thumbnail">
+            </div>
+        </div>
+      </div>
+      <div class="container">
+        <caption><b>Table about Cities, Rivers, and Trees based on Letters</b></caption>
+        <table class="table table-striped table-info">
+            <thead class="table-dark">
+                <tr>
+                    <th scope="col">Letter</th>
+                    <th scope="col">City</th>
+                    <th scope="col">River</th>
+                    <th scope="col">Tree</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                   <tr class="table-info">
+                    <th scope="row">D</th>
+                    <td>Denver</td>
+                    <td>Danube</td>
+                    <td>Dogwood</td>
+                </tr>
+                <tr>
+                    <th scope="row">E</th>
+                    <td>Edinburgh</td>
+                    <td>Euphrates</td>
+                    <td>Elm</td>
+                </tr>
+                <tr>
+                   <tr class="table-info">
+                    <th scope="row">P</th>
+                    <td>Paris</td>
+                    <td>Potomac</td>
+                    <td>Pine</td>
+                </tr>
+                <tr>
+                    <th scope="row">A</th>
+                    <td>Amsterdam</td>
+                    <td>Amazon</td>
+                    <td>Apple Tree</td>
+                </tr>
+                <tr>
+                   <tr class="table-info">
+                    <th scope="row">K</th>
+                    <td>Kyoto</td>
+                    <td>Klamath</td>
+                    <td>Kauri</td>
+                </tr>
+                <tr>
+                    <th scope="row">H</th>
+                    <td>Helsinki</td>
+                    <td>Hudson</td>
+                    <td>Hickory</td>
+                </tr>
+            </tbody>
+        </table>
+      </div>
+  
+<div class="container">
+  <h4>Buttons</h4>
+  <button type="button" class="btn btn-primary">D</button>
+  <button type="button" class="btn btn-primary">E</button>
+  <button type="button" class="btn btn-primary">P</button>
+  <button type="button" class="btn btn-primary">A</button>
+  <button type="button" class="btn btn-primary">K</button>
+  <button type="button" class="btn btn-primary">H</button>
+</div>
+<br>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<a class="navbar-brand" href="#">BUTTONS SECTION</a>
+</nav>
+<div class="container mt-5">
+<div class="btn-toolbar" role="toolbar" aria-label="Button Toolbar">
+
+    <div class="btn-group mr-2" role="group" aria-label="Success Buttons">
+        <button type="button" class="btn btn-lg btn-success">D</button>
+        <button type="button" class="btn btn-lg btn-success">E</button>
+        <button type="button" class="btn btn-lg btn-success">P</button>
+    </div>
+    <div class="btn-group mr-2" role="group" aria-label="Warning Buttons">
+        <button type="button" class="btn btn-lg btn-warning">A</button>
+        <button type="button" class="btn btn-lg btn-warning">K</button>
+    </div>
+    <div class="btn-group" role="group" aria-label="Danger Buttons">
+        <button type="button" class="btn btn-lg btn-danger">H</button>
+    </div>
+</div>
+</div>
+<br>
+<br>
+
+
+<br>
+<br>
+
+    
 </body>
 </html>
