--- a/cities.html
+++ b/cities.html
@@ -15,17 +15,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <style>
-      
-         .th {
-          background-color:white;
-          color: white;
-      }
-
-      .table tbody tr:hover {
-          background-color:white;
-      }
-  </style>
 </head>
 <body>
   <h1>Visit cities with Akhil</h1>
@@ -197,6 +186,41 @@
 <br>
 <br>
 
-    
+<div class="dropdown" style="text-align: center;">
+  <button class="btn btn-secondary dropdown-toggle" style="padding: 12px;" type="button" id="dropdownMenuButton"
+      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Dropdown
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="basic.html" target="_blank">BASIC PAGE</a>
+      <a class="dropdown-item" href="advanced.html" target="_blank">ADVANCED PAGE</a>
+  </div>
+</div>
+<br>
+<br>
+<div class="container">
+  <form>
+      <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone.</small>
+      </div>
+      <div class="form-group">
+          <label for="city">City</label>
+          <input type="text" class="form-control" id="city" placeholder="Enter your city">
+      </div>
+      <div class="form-check">
+          <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="newsletter">
+              <label class="form-check-label" for="newsletter">Sign up for newsletter?</label>
+          </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
