modified citites and added Bonus Images

--- a/cities.html
+++ b/cities.html
@@ -222,5 +222,42 @@
 <br>
 <br>
 <br>
+
+<div class="container">
+  <div class="row">
+      <div class="col-md-4">
+          <div class="card">
+              <img src="Bonus Images\Kyoto.jpg" class="card-img-top" alt="1st City">
+              <div class="card-body">
+                  <h4 class="card-title">Kyoto, Japan</h4>
+                  <p class="card-text">Kyoto is renowned for its well-preserved traditional architecture, historic temples, and beautiful gardens. The city is a living testament to Japan's rich cultural heritage, offering visitors a glimpse into the country's past. Kyoto is especially famous for its annual cherry blossom festivals, tea ceremonies, and the iconic Fushimi Inari Shrine with its thousands of vermillion torii gates.</p>
+                  
+                  <a href="https://kyoto.travel/en/" target="_blank" class="btn btn-primary">To see-click here</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4">
+          <div class="card">
+              <img src="Bonus Images\Venice.jpg" class="card-img-top" alt="2nd Image">
+              <div class="card-body">
+                  <h4 class="card-title">Venice, Italy</h4>
+                  <p class="card-text">Venice is a unique and enchanting city built on a network of canals. Known for its romantic ambiance, visitors can explore the city by navigating the intricate waterways on gondolas or walking through its narrow, winding streets. Venice is also celebrated for its stunning architecture, including landmarks like St. Mark's Basilica and the Doge's Palace. </p>
+                  <a href="https://www.venice-tourism.com/en" target="_blank" class="btn btn-primary">To see-click here</a>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+          <div class="card">
+              <img src="Bonus Images\Rio de Janeiro.jpg" class="card-img-top" alt="3rd City">
+              <div class="card-body">
+                  <h4 class="card-title">Rio de Janeiro, Brazil</h4>
+                  <p class="card-text">Rio de Janeiro is known for its lively and festive atmosphere. Famous for the Carnival festival, the city comes alive with colorful parades, samba music, and vibrant costumes. The iconic Christ the Redeemer statue, perched atop Corcovado Mountain, offers panoramic views of the city and its beautiful beaches.</p>
+                  <a href="https://www.riodejaneiro.com/" target="_blank" class="btn btn-primary">To see-click here</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</div> 
 </body>
 </html>
